# sr

./: LICENSE  Makefile  README.md  sr.cabal
app/: Main.hs
src/: Lib.hs
